--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ cmake_minimum_required(VERSION 3.5)
 project(IPC VERSION 0.0.1 LANGUAGES C)
 
 add_executable(PIPE_SYNC pipe_sync.c)
+
+add_executable(PIPE_LS_WC pipe_ls_wc.c)
