fifo client server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(IPC VERSION 0.0.1 LANGUAGES C)
 
 add_subdirectory(fifos)
+add_subdirectory(task4)
 
 add_executable(PIPE_SYNC pipe_sync.c)
 
