--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(IPC VERSION 0.0.1 LANGUAGES C)
 
 add_subdirectory(fifos)
 add_subdirectory(task4)
+add_subdirectory(sockets)
 
 add_executable(PIPE_SYNC pipe_sync.c)
 
